# g7Telegram-devops

./: .gitignore  Cargo.toml  NOTICE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
config/: agent.example.toml
crates/g7tg-agent/: Cargo.toml
crates/g7tg-agent/src/: actions.rs  config.rs  main.rs  menu.rs  monitor.rs  power.rs  runtime.rs  services.rs  setup.rs  storage.rs  system.rs  telegram.rs  tls.rs  ui.rs  web.rs
crates/g7tg-core/: Cargo.toml
crates/g7tg-core/src/: lib.rs
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  OPERATIONS.md  PRODUCT_SCOPE.md  SECURITY.md  SECURITY_REVIEW.md  VERIFICATION.md
docs/assets/: README.md
packaging/config/: allowed-units
packaging/deb/: postinst  postrm  prerm
packaging/libexec/: g7tg-exec
packaging/release/: Dockerfile
packaging/sudoers/: g7telegram-devops
packaging/systemd/: g7tg-agent.service
scripts/: build-cache-dir.sh  build-package-local.sh  check-package.sh  check.sh  clean-local.sh  container-smoke.sh  deploy-local.sh  install.sh  release-local.sh  verify-local.sh
