[workspace]
resolver = "3"
members = [
    "crates/g7tg-core",
    "crates/g7tg-agent",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96.0"
authors = ["G7Telegram DevOps Contributors"]
repository = "https://github.com/jiwonpapa/g7Telegram-devops"
publish = false

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
rusqlite = { version = "0.40.1", default-features = false, features = ["bundled"] }
secrecy = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sysinfo = { version = "0.39.6", default-features = false, features = ["disk", "system"] }
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "macros", "serde"] }
tokio = { version = "1.48", features = ["fs", "macros", "process", "rt-multi-thread", "signal", "time"] }
toml = "1.1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.18", features = ["v4"] }

[workspace.lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unwrap_used = "deny"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"

