[package]
name = "g7tg-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[[bin]]
name = "g7tg"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
g7tg-core = { path = "../g7tg-core" }
reqwest.workspace = true
rusqlite.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
sysinfo.workspace = true
time.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
